--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Frontend Mentor | Meet landing page</title>
   </head>
