--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           Meet makes it easy to connect with others face-to-face virtually and
           collaborate across any device.
         </p>
-        <button>Download v1.3</button>
-        <button>What is it?</button>
+        <button class="cyan">Download v1.3</button>
+        <button class="purple">What is it?</button>
       </section>
       <div>01</div>
       <section>
@@ -51,7 +51,7 @@
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button>Download v1.3</button>
+      <button class="purple">Download v1.3</button>
     </footer>
   </body>
 </html>
