--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Frontend Mentor | Meet landing page</title>
   </head>
   <body>
     <header>
-      <div>
-        <img alt="meet company logo" />
-        <p>meet</p>
-      </div>
+      <div class="logo"></div>
     </header>
     <main>
       <section>
-        <h1>Group Chat for everyone</h1>
-        <p>
-          Meet makes it easy to connect with others face-to-face virtually and
-          collaborate across any device.
-        </p>
-        <button class="cyan">Download v1.3</button>
-        <button class="purple">What is it?</button>
+        <div class="hero"></div>
+        <article>
+          <h1>Group Chat for Everyone</h1>
+          <p>
+            Meet makes it easy to connect with others face-to-face virtually and
+            collaborate across any device.
+          </p>
+          <div class="actions">
+            <button class="cyan">Download v1.3</button>
+            <button class="purple">What is it?</button>
+
+          </div>
+        </article>
       </section>
       <div>01</div>
       <section>
@@ -42,16 +46,16 @@
           access, data encryption, and data export
         </p>
       </section>
+      <div>02</div>
     </main>
-    
-    <div>02</div>
+
     <footer>
       <h2>Experience more together</h2>
       <p>
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button class="purple">Download v1.3</button>
+      <button class="purple">Download <span>v1.3</span></button>
     </footer>
   </body>
 </html>
