--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="logo"></div>
     </header>
     <main>
-      <section>
+      <section id="intro">
         <div class="hero"></div>
         <article>
           <h1>Group Chat for Everyone</h1>
@@ -31,20 +31,44 @@
           <div class="actions">
             <button class="cyan">Download v1.3</button>
             <button class="purple">What is it?</button>
-
           </div>
         </article>
       </section>
       <div>01</div>
-      <section>
-        <div>Images</div>
-        <h2>Built for modern use</h2>
-        <h3>Smarter meetings, all in one place</h3>
-        <p>
-          Send messages, share files, show your screen, and record your meetings
-          — all in one workspace. Control who can join with invite-only team
-          access, data encryption, and data export
-        </p>
+      <section id="content">
+        <div class="images-block">
+          <img
+            src="./assets/desktop/image-woman-in-videocall.jpg"
+            alt="woman in videcall"
+            class="image"
+          />
+          <img
+            src="./assets/desktop/image-women-videochatting.jpg"
+            alt="woman in videochatting"
+            class="image"
+          />
+          <img
+            src="/assets/desktop/image-men-in-meeting.jpg"
+            alt="man in meeting"
+            class="image"
+          />
+          <img
+            src="/assets/desktop/image-man-texting.jpg"
+            alt="man texting"
+            class="image"
+          />
+        </div>
+        <div class="description">
+          <div class="title">
+            <h3>Built for modern use</h2>
+            <h2>Smarter meetings, all in one place</h3> 
+          </div>
+          <p>
+            Send messages, share files, show your screen, and record your
+            meetings — all in one workspace. Control who can join with
+            invite-only team access, data encryption, and data export.
+          </p>
+        </div>
       </section>
       <div>02</div>
     </main>
