Add separators - mobile

--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
             collaborate across any device.
           </p>
           <div class="actions">
-            <button class="cyan">Download v1.3</button>
+            <button class="cyan">Download <span>v1.3</span></button>
             <button class="purple">What is it?</button>
           </div>
         </article>
       </section>
-      <div>01</div>
+      <div class="separator">
+        <div class="line"></div>
+        <div class="circle">01</div>
+      </div>
       <section id="content">
         <div class="images-block">
           <img
@@ -60,8 +63,8 @@
         </div>
         <div class="description">
           <div class="title">
-            <h3>Built for modern use</h2>
-            <h2>Smarter meetings, all in one place</h3> 
+            <h3>Built for modern use</h3>
+            <h2>Smarter meetings, all in one place</h2>
           </div>
           <p>
             Send messages, share files, show your screen, and record your
@@ -70,7 +73,10 @@
           </p>
         </div>
       </section>
-      <div>02</div>
+      <div class="separator ontop">
+        <div class="line"></div>
+        <div class="circle">02</div>
+      </div>
     </main>
 
     <footer>
