Tablet version finished

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
     <main>
       <section id="intro">
-        <div class="hero"></div>
+        <div class="hero1"></div>
         <article>
-          <h1>Group Chat for Everyone</h1>
+          <h1>Group Chat<br />for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
@@ -33,6 +33,7 @@
             <button class="purple">What is it?</button>
           </div>
         </article>
+        <div class="hero2"></div>
       </section>
       <div class="separator">
         <div class="line"></div>
@@ -80,12 +81,14 @@
     </main>
 
     <footer>
-      <h2>Experience more together</h2>
-      <p>
-        Stay connected with reliable HD meetings and unlimited one-on-one and
-        group video sessions.
-      </p>
-      <button class="purple">Download <span>v1.3</span></button>
+      <div class="footer-content">
+        <h2>Experience more together</h2>
+        <p>
+          Stay connected with reliable HD meetings and unlimited one-on-one and
+          group video sessions.
+        </p>
+        <button class="purple">Download <span>v1.3</span></button>
+      </div>
     </footer>
   </body>
 </html>
