Fix images sources

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             class="image"
           />
           <img
-            src="/assets/desktop/image-men-in-meeting.jpg"
+            src="./assets/desktop/image-men-in-meeting.jpg"
             alt="man in meeting"
             class="image"
           />
           <img
-            src="/assets/desktop/image-man-texting.jpg"
+            src="./assets/desktop/image-man-texting.jpg"
             alt="man texting"
             class="image"
           />
